--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -7,5 +7,5 @@ jobs:
       - name: Check out repository code
         uses: actions/checkout@v3
       - name: Print hello world
-        run: echo "Hello World"
+        run: echo "$(cat hello.txt)"
     
