--- a/.github/workflows/build-app.yaml
+++ b/.github/workflows/build-app.yaml
@@ -11,7 +11,7 @@ jobs:
                 uses: actions/checkout@v3
             
               - name: use node.js
-                uses: actions/setupnode@v3
+                uses: actions/setup-node@v3
                 with:
                     node-version: '18.x'
               - name: Install dependencies
