--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@nx/cypress": "17.2.3",
     "@nx/eslint": "17.2.3",
     "@nx/eslint-plugin": "17.2.3",
+    "@nx/jest": "^17.2.4",
     "@nx/js": "17.2.3",
     "@nx/react": "17.2.3",
     "@nx/vite": "17.2.3",
@@ -14,7 +15,9 @@
     "@swc-node/register": "~1.6.7",
     "@swc/cli": "~0.1.62",
     "@swc/core": "~1.3.85",
-    "@testing-library/react": "14.0.0",
+    "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/react": "^14.0.0",
+    "@types/jest": "^29.5.11",
     "@types/node": "18.14.2",
     "@types/react": "18.2.33",
     "@types/react-dom": "18.2.14",
@@ -31,10 +34,12 @@
     "eslint-plugin-jsx-a11y": "6.7.1",
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
+    "jest": "^29.7.0",
     "jsdom": "~22.1.0",
     "nx": "17.2.3",
     "prettier": "^2.6.2",
     "sass": "^1.55.0",
+    "ts-jest": "^29.1.1",
     "typescript": "~5.2.2",
     "vite": "^5.0.0",
     "vitest": "~0.34.6"
