--- a/.github/workflows/build-app.yaml
+++ b/.github/workflows/build-app.yaml
@@ -14,7 +14,17 @@ jobs:
                 uses: actions/setup-node@v3
                 with:
                     node-version: '18.x'
-              - name: Install dependencies
-                run: npm install
-              - name: Build app
-                run: npm run build
+              - run: npm install
+              - run: npm run build
+    test:
+        needs: build
+        runs-on: ubuntu-latest
+        steps:
+            - name: checkout repo code
+              uses: actions/checkout@v3
+          
+            - name: use node.js
+              uses: actions/setup-node@v3
+              with:
+                  node-version: '18.x'
+            - run: npm run test
