--- a/.github/workflows/build-app.yaml
+++ b/.github/workflows/build-app.yaml
@@ -14,8 +14,8 @@ jobs:
                 uses: actions/setup-node@v3
                 with:
                     node-version: '18.x'
-              - run: npm install
-              - run: npm run build
+              - run: yarn install
+              - run: yarn run build
     test:
         needs: build
         runs-on: ubuntu-latest
@@ -27,4 +27,4 @@ jobs:
               uses: actions/setup-node@v3
               with:
                   node-version: '18.x'
-            - run: npm run test
+            - run: yarn run test
