--- a/.github/workflows/build-app.yml
+++ b/.github/workflows/build-app.yml
@@ -28,5 +28,6 @@ jobs:
               uses: actions/setup-node@v3
               with:
                   node-version: '18.x'
+                    cache: 'yarn'
             - run: yarn install
             - run: yarn run test
