--- a/.github/workflows/build-app.yaml
+++ b/.github/workflows/build-app.yaml
@@ -14,6 +14,7 @@ jobs:
                 uses: actions/setup-node@v3
                 with:
                     node-version: '18.x'
+                    cache: 'yarn'
               - run: yarn install
               - run: yarn run build
     test:
@@ -27,4 +28,5 @@ jobs:
               uses: actions/setup-node@v3
               with:
                   node-version: '18.x'
+                  cache: 'yarn'
             - run: yarn run test
