--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "jsx": "react",
+    "jsx": "react-jsx",
     "paths": {}
   },
   "exclude": ["node_modules", "tmp"]
