deploy gh pages for react

--- a/.github/workflows/build-app.yaml
+++ b/.github/workflows/build-app.yaml
@@ -15,14 +15,16 @@ jobs:
                 with:
                     node-version: '18.x'
                     cache: 'yarn'
+                    
               - name: yarn install
                 uses: Borales/actions-yarn@v4.2.0
                 with:
                     cmd: install
+
               - name: yarn run 
                 uses: Borales/actions-yarn@v4.2.0
                 with:
-                    cmd: run build
+                    cmd: nx devops:build
     test:
         needs: build
         runs-on: ubuntu-latest
@@ -35,11 +37,56 @@ jobs:
               with:
                   node-version: '18.x'
                   cache: 'yarn'
+
             - name: yarn install 
               uses: Borales/actions-yarn@v4.2.0
               with:
                   cmd: install
+
             - name: yarn run 
               uses: Borales/actions-yarn@v4.2.0
               with:
-                  cmd: run test
+                  cmd: nx devops:test
+    deploy:
+      needs: test
+      runs-on: windows-latest
+      permissions:
+        contents: write
+        pages: write
+        id-token: write
+      environment:
+        name: development
+        url: ${{ steps.deployment.outputs.page_url }}
+      steps:
+          - name: checkout repo
+            uses: actions/checkout@v3
+            with:
+              token: ${{ secrets.GITHUB_TOKEN }}
+
+          - name: use node.js
+            uses: actions/setup-node@v3
+            with:
+              node-version: '18.x'
+              cache: 'npm'
+
+          - name: configure github pages
+            uses: actions/configure-pages@v3
+
+          - name: yarn install
+            uses: Borales/actions-yarn@v4.2.0
+            with:
+              cmd: install --immutable
+
+          - name: yarn nx build 
+            uses: Borales/actions-yarn@v4.2.0
+            with:
+                cmd: nx devops:build
+
+          - name: upload artifacts
+            uses: actions/upload-pages-artifact@v1
+            with: 
+              path: "./dist/apps/devops"
+
+          - name: deploy
+            id: deployment
+            uses: actions/deploy-pages@v1
