--- a/.github/workflows/build-app.yaml
+++ b/.github/workflows/build-app.yaml
@@ -10,11 +10,10 @@ jobs:
               - name: checkout repo code
                 uses: actions/checkout@v3
             
-              - name: use node.js
-                uses: actions/setup-node@v3
+              - name: Yarn setup
+                uses: DerYeger/yarn-setup-action@master
                 with:
-                    node-version: '18.x'
-                    cache: 'yarn'
+                  node-version: 16
 
               - name: yarn install
                 uses: Borales/actions-yarn@v4.2.0
@@ -32,21 +31,14 @@ jobs:
             - name: checkout repo code
               uses: actions/checkout@v3
           
-            - name: use node.js
-              uses: actions/setup-node@v3
+            - name: Yarn setup
+              uses: DerYeger/yarn-setup-action@master
               with:
-                  node-version: '18.x'
-                  cache: 'yarn'
+                node-version: 16
 
-            - name: yarn install 
-              uses: Borales/actions-yarn@v4.2.0
-              with:
-                  cmd: install --immutable
+            - run: yarn install --immutable
 
-            - name: yarn run 
-              uses: Borales/actions-yarn@v4.2.0
-              with:
-                  cmd: nx run devops:test
+            - run: yarn nx run devops:test
     deploy:
       needs: test
       runs-on: windows-latest
@@ -63,24 +55,16 @@ jobs:
             with:
               token: ${{ secrets.GITHUB_TOKEN }}
 
-          - name: use node.js
-            uses: actions/setup-node@v3
+          - name: Yarn setup
+            uses: DerYeger/yarn-setup-action@master
             with:
-              node-version: '18.x'
-              cache: 'npm'
+              node-version: 16
 
           - name: configure github pages
             uses: actions/configure-pages@v3
 
-          - name: yarn install
-            uses: Borales/actions-yarn@v4.2.0
-            with:
-              cmd: install --immutable
-
-          - name: yarn nx build 
-            uses: Borales/actions-yarn@v4.2.0
-            with:
-                cmd: nx run devops:build
+          - run: yarn install --immutable
+          - run: yarn nx run devops:build
 
           - name: upload artifacts
             uses: actions/upload-pages-artifact@v1
