--- a/.github/workflows/build-app.yaml
+++ b/.github/workflows/build-app.yaml
@@ -10,11 +10,11 @@ jobs:
               - name: checkout repo code
                 uses: actions/checkout@v3
             
-              - name: Yarn setup
-                uses: DerYeger/yarn-setup-action@master
+              - name: Setup Node.js
+                uses: actions/setup-node
                 with:
-                  node-version: 18
-
+                  node-version: '18.x'
+                  cache: 'yarn'
               - run: yarn install
               - run: yarn nx run devops:build
     test:
@@ -24,10 +24,11 @@ jobs:
             - name: checkout repo code
               uses: actions/checkout@v3
           
-            - name: Yarn setup
-              uses: DerYeger/yarn-setup-action@master
+            - name: Setup Node.js
+              uses: actions/setup-node
               with:
-                node-version: 18
+                node-version: '18.x'
+                cache: 'yarn'
 
             - run: yarn install
             - run: yarn nx run devops:test
@@ -47,10 +48,11 @@ jobs:
             with:
               token: ${{ secrets.GITHUB_TOKEN }}
 
-          - name: Yarn setup
-            uses: DerYeger/yarn-setup-action@master
+          - name: Setup Node.js
+            uses: actions/setup-node
             with:
-              node-version: 18
+              node-version: '18.x'
+              cache: 'yarn'
 
           - name: configure github pages
             uses: actions/configure-pages@v3
