--- a/.github/workflows/build-app.yml
+++ b/.github/workflows/build-app.yml
@@ -13,7 +13,7 @@ jobs:
                 uses: actions/checkout@v3
             
               - name: Setup Node.js
-                uses: actions/setup-node
+                uses: actions/setup-node@v3
                 with:
                   node-version: '18.x'
                   cache: 'yarn'
@@ -27,7 +27,7 @@ jobs:
               uses: actions/checkout@v3
           
             - name: Setup Node.js
-              uses: actions/setup-node
+              uses: actions/setup-node@v3
               with:
                 node-version: '18.x'
                 cache: 'yarn'
@@ -51,7 +51,7 @@ jobs:
               token: ${{ secrets.GITHUB_TOKEN }}
 
           - name: Setup Node.js
-            uses: actions/setup-node
+            uses: actions/setup-node@v3
             with:
               node-version: '18.x'
               cache: 'yarn'
