--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
         "vite": "^5.0.0",
         "vitest": "~0.34.6"
     },
-    "packageManager": "yarn@4.0.2",
+    "packageManager": "yarn@3.7.0+sha256.7bf0c78a106332886ea4e59641fd819b1af953edcd72c4d93a32b1c71000ee67",
     "dependencies": {
         "@swc/helpers": "~0.5.2",
         "react": "18.2.0",
