--- a/.github/workflows/build-app.yml
+++ b/.github/workflows/build-app.yml
@@ -16,7 +16,7 @@ jobs:
                 uses: actions/setup-node@v3
                 with:
                   node-version: '18.x'
-                  cache: 'yarn'
+                  cache: 'yarn@3'
               - run: yarn install
               - run: yarn nx run devops:build
     test:
@@ -30,7 +30,7 @@ jobs:
               uses: actions/setup-node@v3
               with:
                 node-version: '18.x'
-                cache: 'yarn'
+                cache: 'yarn@3'
 
             - run: yarn install
             - run: yarn nx run devops:test
@@ -54,7 +54,7 @@ jobs:
             uses: actions/setup-node@v3
             with:
               node-version: '18.x'
-              cache: 'yarn'
+              cache: 'yarn@3'
 
           - name: configure github pages
             uses: actions/configure-pages@v3
