--- a/.github/workflows/build-app.yml
+++ b/.github/workflows/build-app.yml
@@ -17,6 +17,19 @@ jobs:
                 with:
                   node-version: '18.x'
                   cache: 'yarn'
+
+              - name: Get yarn cache directory path
+                id: yarn-cache-dir-path
+                run: echo "::set-output name=dir::$(yarn config get cacheFolder)"
+              
+              - uses: actions/cache@v3
+                id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
+                with:
+                  path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+                  key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+                  restore-keys: |
+                    ${{ runner.os }}-yarn-
+
               - run: yarn install
               - run: yarn nx run devops:build
     test:
@@ -31,6 +44,17 @@ jobs:
               with:
                 node-version: '18.x'
                 cache: 'yarn'
+            - name: Get yarn cache directory path
+              id: yarn-cache-dir-path
+              run: echo "::set-output name=dir::$(yarn config get cacheFolder)"
+            
+            - uses: actions/cache@v3
+              id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
+              with:
+                path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+                key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+                restore-keys: |
+                  ${{ runner.os }}-yarn-
 
             - run: yarn install
             - run: yarn nx run devops:test
@@ -58,6 +82,18 @@ jobs:
 
           - name: configure github pages
             uses: actions/configure-pages@v3
+
+          - name: Get yarn cache directory path
+            id: yarn-cache-dir-path
+            run: echo "::set-output name=dir::$(yarn config get cacheFolder)"
+          
+          - uses: actions/cache@v3
+            id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
+            with:
+              path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+              key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+              restore-keys: |
+                ${{ runner.os }}-yarn-
 
           - run: yarn install --immutable
           - run: yarn nx run devops:build
