--- a/.github/workflows/build-app.yml
+++ b/.github/workflows/build-app.yml
@@ -66,7 +66,7 @@ jobs:
           - name: configure github pages
             uses: actions/configure-pages@v4
 
-          - run: yarn install --immutable
+          - run: yarn install
           - run: yarn nx run devops:build
 
           - name: upload artifacts
