--- a/.github/workflows/build-app.yml
+++ b/.github/workflows/build-app.yml
@@ -12,6 +12,8 @@ jobs:
               - name: checkout repo code
                 uses: actions/checkout@v4
             
+              - run: corepack enable
+
               - name: Setup Node.js
                 uses: actions/setup-node@v4
                 with:
@@ -29,6 +31,8 @@ jobs:
             - name: checkout repo code
               uses: actions/checkout@v4
           
+            - run: corepack enable
+
             - name: Setup Node.js
               uses: actions/setup-node@v4
               with:
@@ -55,6 +59,8 @@ jobs:
             with:
               token: ${{ secrets.GITHUB_TOKEN }}
 
+          - run: corepack enable
+              
           - name: Setup Node.js
             uses: actions/setup-node@v4
             with:
