--- a/.github/workflows/build-app.yml
+++ b/.github/workflows/build-app.yml
@@ -12,6 +12,8 @@ jobs:
           - uses: actions/checkout@v4
         
           - run: corepack enable
+          - run: echo "$(corepack -h)"
+          - run: corepack prepare yarn@*
 
           - uses: actions/setup-node@v4
             with:
@@ -57,6 +59,7 @@ jobs:
             token: ${{ secrets.GITHUB_TOKEN }}
 
         - run: corepack enable
+        - run: corepack prepare yarn@*
             
         - uses: actions/setup-node@v4
           with:
