--- a/.github/workflows/build-app.yml
+++ b/.github/workflows/build-app.yml
@@ -12,8 +12,7 @@ jobs:
           - uses: actions/checkout@v4
         
           - run: corepack enable
-          - run: echo "$(corepack -h)"
-          - run: corepack prepare yarn@*
+          - run: corepack prepare yarn@stable
 
           - uses: actions/setup-node@v4
             with:
@@ -32,6 +31,7 @@ jobs:
           - uses: actions/checkout@v4
         
           - run: corepack enable
+          - run: corepack prepare yarn@stable
 
           - uses: actions/setup-node@v4
             with:
@@ -59,7 +59,7 @@ jobs:
             token: ${{ secrets.GITHUB_TOKEN }}
 
         - run: corepack enable
-        - run: corepack prepare yarn@*
+        - run: corepack prepare yarn@stable
             
         - uses: actions/setup-node@v4
           with:
