--- a/.github/workflows/build-app.yml
+++ b/.github/workflows/build-app.yml
@@ -60,6 +60,7 @@ jobs:
 
         - run: corepack enable
         - run: corepack prepare yarn@stable
+        - run: corepack use yarn@stable
             
         - uses: actions/setup-node@v4
           with:
