--- a/.github/workflows/build-app.yml
+++ b/.github/workflows/build-app.yml
@@ -59,8 +59,7 @@ jobs:
             token: ${{ secrets.GITHUB_TOKEN }}
 
         - run: corepack enable
-        - run: corepack prepare yarn@stable
-        - run: corepack use yarn@stable
+        - run: corepack prepare yarn@stable --activate
             
         - uses: actions/setup-node@v4
           with:
