--- a/.github/workflows/build-app.yml
+++ b/.github/workflows/build-app.yml
@@ -59,7 +59,7 @@ jobs:
             token: ${{ secrets.GITHUB_TOKEN }}
 
         - run: corepack enable
-        - run: corepack prepare yarn@stable --activat
+        - run: corepack prepare yarn@stable --activate
         - run: yarn set version stable --yarn-path
             
         - uses: actions/setup-node@v4
