--- a/.github/workflows/build-app.yml
+++ b/.github/workflows/build-app.yml
@@ -9,12 +9,16 @@ jobs:
     build:
         runs-on: macos-latest
         steps:
-          - uses: actions/checkout@v4
+          - name: Checkout repository
+            uses: actions/checkout@v4
         
-          - run: corepack enable
-          - run: corepack prepare yarn@stable
+          - name: Enable corepack
+            run: corepack enable
+          - name: Enable Yarn
+            run: corepack prepare yarn@stable
 
-          - uses: actions/setup-node@v4
+          - name: Setup Node.js
+            uses: actions/setup-node@v4
             with:
               node-version: '18.x'
               check-latest: true
@@ -23,17 +27,22 @@ jobs:
 
           - run: yarn install
           - run: yarn nx run devops:build
-          - run: corepack disable
+          - name: Post enable corepack
+            run: corepack disable
     test:
         needs: build
         runs-on: ubuntu-latest
         steps:
-          - uses: actions/checkout@v4
+          - name: Checkout repository
+            uses: actions/checkout@v4
         
-          - run: corepack enable
-          - run: corepack prepare yarn@stable
+          - name: Enable corepack
+            run: corepack enable
+          - name: Enable Yarn
+            run: corepack prepare yarn@stable
 
-          - uses: actions/setup-node@v4
+          - name: Setup Node.js
+            uses: actions/setup-node@v4
             with:
               node-version: '18.x'
               check-latest: true
@@ -42,10 +51,11 @@ jobs:
 
           - run: yarn install
           - run: yarn nx run devops:test
-          - run: corepack disable
+          - name: Post setup corepack
+            run: corepack disable
     deploy:
       needs: test
-      runs-on: windows-latest
+      runs-on: macos-latest
       permissions:
         contents: write
         pages: write
@@ -54,30 +64,37 @@ jobs:
         name: development
         url: ${{ steps.deployment.outputs.page_url }}
       steps:
-        - uses: actions/checkout@v4
+        - name: Checkout repository
+          uses: actions/checkout@v4
           with:
             token: ${{ secrets.GITHUB_TOKEN }}
 
-        - run: corepack enable
-        - run: corepack prepare yarn@stable --activate
-        - run: yarn set version stable --yarn-path
+        - name: Enable corepack
+          run: corepack enable
+        - name: Enable Yarn
+          run: corepack prepare yarn@stable --activate
             
-        - uses: actions/setup-node@v4
+        - name: Setup Node.js
+          uses: actions/setup-node@v4
           with:
             node-version: '18.x'
             check-latest: true
             cache: 'yarn'
             cache-dependency-path: 'yarn.lock'
 
-        - uses: actions/configure-pages@v4
+        - name: Configure GitHub Actions
+          uses: actions/configure-pages@v4
 
         - run: yarn install
         - run: yarn nx run devops:build
 
-        - uses: actions/upload-pages-artifact@v2
+        - name: Upload Artifacts
+          uses: actions/upload-pages-artifact@v2
           with: 
             path: "dist/apps/devops"
 
-        - id: deployment
+        - name: Deploy Pages
+          id: deployment
           uses: actions/deploy-pages@v3
-        - run: corepack disable
+        - name: Post enable corepack
+          run: corepack disable
